# conga

./: Cargo.toml  Insomnia_Export.json  README.md  openapi.json
config/: conga.toml
docker/: Dockerfile  Dockerfile_Simple  docker-compose.yml
scripts/: cross-compile.sh  docker-build-dev.sh  docker-build-release.sh  docker-build.sh
src/: libs.rs  main.rs
src/libs/: .routes.rs.swp  middleware.rs  routes.rs  structs.rs  utils.rs
