[package]
name = "conga"
description = "Basic HTTP queue that stores JSON objects in memory."
version = "1.0.0-cors"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

[dependencies]
# Configs
dotenv = "0.15.0"
toml = "0.5"
# Logging
log = "0.4.17"
simplelog = "0.12"
# Core
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1.18.2", features = ["full"] }
wake-on-lan = "0.2.0"
chrono = "0.4"
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
hex = "0.4"
