[package]
name = "conga"
description = "Basic HTTP queue that stores JSON objects in memory."
version = "1.0.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

[dependencies]
# Configs
dotenv = "0.15.0"
toml = "0.5.9"
# Logging
log = "0.4.17"
simplelog = "0.12"
# Core
actix-web = "4.2.1"
actix-cors = "0.6.2"
tokio = { version = "1.21.1", features = ["full"] }
wake-on-lan = "0.2.0"
chrono = "0.4.22"
time = "0.3.14"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
futures-util = { version = "0.3.24", default-features = false, features = ["std"] }
hex = "0.4.3"
# Extras
utoipa = {version = "2.1", features = ["actix_extras"]}
utoipa-swagger-ui = { version = "2.0", features = ["actix-web"] }
